# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md
config/: base.yaml
migrations/: 20220412135536_make_status_not_null_in_subscriptions.sql  20220412135952_create_subscription_token_table.sql
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  dashboard.rs  helper.rs  login.rs  main.rs  newsletter.rs  subscription_confirm.rs  subscriptions.rs
